main-utils/keel-predeployment.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: keel
