main-utils/grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-utils
  labels:
    app: grafana
  name: grafana
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll      
    keel.sh/pollSchedule: "@every 4h"
    keel.sh/approvals: "1"
    keel.sh/approvalDeadline: "720"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana         
      volumes:
        - name: grafana-data
          nfs:
            server: 192.168.55.21
            path: /volume1/k8s-configs/data/main-utils/grafana-data
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: main-utils
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      name: web
  selector:
    app: grafana
