main-utils/homepage-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`homepage.home.arpa`) || Host(`ar-homepage.crzynet.com`)
    kind: Rule
    services:
      - name: homepage
        port: 3000
